--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -4,15 +4,21 @@ $primaryColor:   #0277bd;
 $accentColor:    #1de9b6;
 $bgColor:        #efefef;
 $darkBgColor:    #263238;
-$lightBgColor:   #37474f;
+$lightBgColor:   #ffffff;
 $lightTextColor: #f5f5f5;
 $darkTextColor:  #212121;
+
+$bp-mobile: 600px; // breakpoint for mobile
 
 body {
    height: 100%;
    // browsers default to 16px for font-size,
-   // so setting top-level font-size to 62.5%
+   // so setting top-level font-size to:w 62.5%
    // scales 1rem to equal 10px.
    font: 62.5% 'Roboto', sans-serif;
+}
+
+.hidden {
+   display: none;
 }
 
