--- a/client/app/components/agents/agents.scss
+++ b/client/app/components/agents/agents.scss
@@ -1,3 +1,37 @@
-.about {
-  color: red;
+@import '../../common/mixins';
+
+.search-header {
+  height: 120px;
+  background: url('../../images/agent-header.jpg') no-repeat center top;
+  background-size: cover;
+  width: 100%;
+  padding-top: 80px;
 }
+
+.search-header__form {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.search-header__form-input {
+  font-size: 1.5em;
+  padding: 10px;
+  width: 500px;
+  @media(max-width: $bp-mobile){
+    width: 100%;
+  }
+}
+
+.search-header__form-button {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #777;
+  padding: 12px 20px;
+  @media(max-width: $bp-mobile){
+    margin: 0 auto;
+  }
+}
+
+
+
+
