added agents results and styling

--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -9,6 +9,7 @@ $lightTextColor: #f5f5f5;
 $darkTextColor:  #212121;
 
 $bp-mobile: 600px; // breakpoint for mobile
+$bp-tablet: 900px; // breakpoint for tablets
 
 body {
    height: 100%;
