--- a/client/app/components/agents/agents.html
+++ b/client/app/components/agents/agents.html
@@ -2,7 +2,7 @@
 <section class="search-header">
   <form ng-submit="$ctrl.searchAgents()" class="search-header__form">
       <label for="agents" class="hidden">Search Agents</label>
-      <input id="agents" type="text" class="search-header__form-input" ng-model="$ctrl.searchtext">
+      <input id="agents" type="text" class="search-header__form-input t-search-input" ng-model="$ctrl.searchtext">
       <input type="submit" value="Search" class="button search-header__form-button">
   </form>
 </section>
